# useract-forensic

./: .gitleaks.toml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  index.html  mkdocs.yml  release-plz.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release-plz.yml
PRD/: index.html
decisions/0001-orchestration-correlation-layer-no-parsing/: index.html
decisions/0002-single-meta-crate-no-core-forensic-split/: index.html
decisions/0003-normalized-useractivity-and-activitysource-seam/: index.html
decisions/0004-findings-via-forensicnomicon-report/: index.html
decisions/0005-cross-source-joins-structural-and-graded/: index.html
decisions/0006-forbid-unsafe-panic-free-by-lint/: index.html
decisions/0007-low-msrv-floor-below-dev-pin/: index.html
docs/: PRD.md  index.md  privacy.md  roadmap.md  terms.md
docs/decisions/: 0001-orchestration-correlation-layer-no-parsing.md  0002-single-meta-crate-no-core-forensic-split.md  0003-normalized-useractivity-and-activitysource-seam.md  0004-findings-via-forensicnomicon-report.md  0005-cross-source-joins-structural-and-graded.md  0006-forbid-unsafe-panic-free-by-lint.md  0007-low-msrv-floor-below-dev-pin.md
privacy/: index.html
roadmap/: index.html
search/: search_index.json
src/: lib.rs
supply-chain/: config.toml
terms/: index.html
tests/: real_data.rs
tests/data/: README.md  real_bash_history
